# coding-challenges

./: README.md
advent-of-code-2021/: README.md
advent-of-code-2021/src/q1/: test.py  test2.py
advent-of-code-2021/src/q10/: q101.py  q101_backup.py  q102.py
advent-of-code-2021/src/q11/: q111.py  q112.py
advent-of-code-2021/src/q12/: q121.py  q122.py
advent-of-code-2021/src/q13/: q131.py  q132.py
advent-of-code-2021/src/q14/: q141.py  q142.py
advent-of-code-2021/src/q15/: q151.py  q152.py
advent-of-code-2021/src/q17/: q171.py  q172.py
advent-of-code-2021/src/q18/: q181.py  q182.py
advent-of-code-2021/src/q19/: q191.py  q192.py  rotations.txt
advent-of-code-2021/src/q2/: q21.py  q22.py
advent-of-code-2021/src/q3/: q31.py  q32.py
advent-of-code-2021/src/q4/: q41.py  q42.py
advent-of-code-2021/src/q5/: q51.py  q52.py
advent-of-code-2021/src/q6/: q61.py  q62.py
advent-of-code-2021/src/q7/: q71.py  q72.py
advent-of-code-2021/src/q8/: q81.py  q82.py
advent-of-code-2021/src/q9/: q91.py  q92.py
advent-of-code-2025/day01/q1/: CMakeLists.txt
advent-of-code-2025/day01/q2/: CMakeLists.txt
advent-of-code-2025/day02/q1/: CMakeLists.txt
advent-of-code-2025/day02/q1/src/: brute_force.cpp  main.cpp
advent-of-code-2025/day02/q2/: CMakeLists.txt
advent-of-code-2025/day03/q1/: CMakeLists.txt
advent-of-code-2025/day03/q2/: CMakeLists.txt
advent-of-code-2025/day04/q1/: CMakeLists.txt
advent-of-code-2025/day04/q2/: CMakeLists.txt
advent-of-code-2025/day05/q1/: CMakeLists.txt
advent-of-code-2025/day05/q1/src/: main.cpp
advent-of-code-2025/day05/q2/: CMakeLists.txt
advent-of-code-2025/day06/q1/: CMakeLists.txt
advent-of-code-2025/day06/q2/: CMakeLists.txt
advent-of-code-2025/day07/q1/: CMakeLists.txt
advent-of-code-2025/day07/q2/: CMakeLists.txt
advent-of-code-2025/day08/q1/: CMakeLists.txt
advent-of-code-2025/day08/q2/: CMakeLists.txt
advent-of-code-2025/day09/q2/: CMakeLists.txt
advent-of-code-2025/day09/q2/src/: main.cpp
advent-of-code-2025/day09/q2/src/test/: visualization.py
advent-of-code-2025/day10/q2/: CMakeLists.txt
advent-of-code-2025/day10/q2/src/: main.cpp
advent-of-code-2025/day11/q2/: CMakeLists.txt
advent-of-code-2025/day11/q2/src/: main.cpp
(+21 files in other folders)
